# ros_ren

./: README.md
devel/: .catkin
devel/lib/color_detect/: color_detect
devel/lib/image_test/: image_publisher
devel/lib/mypkg_01/: detectFace
devel/lib/pkgconfig/: 01.pc  async_web_server_cpp.pc  cifar_test.pc  color_detect.pc  image_test.pc  mypkg.pc  mypkg_01.pc  raspi_camera.pc  raspi_camera_test.pc  raspi_image.pc  sobel_test.pc  test_pkg.pc  web_video_server.pc
devel/lib/raspi_camera/: raspi_camera
devel/lib/raspi_camera_test/: face_to_face1.py
devel/lib/raspi_image/: raspi_image
devel/lib/sobel_test/: sobel_test
devel/lib/test_pkg/: test_pub  test_sub
devel/lib/web_video_server/: web_video_server
share/: cat_cascade_1000.xml  cat_cascade_5000.xml
src/01/: CMakeLists.txt  package.xml
src/color_detect/: CMakeLists.txt  package.xml
src/color_detect/scripts/: .color_detect.py.swp  color_detect.py
src/color_detect/src/: .color_detect.cpp.swp  color_detect.cpp
src/image_test/: CMakeLists.txt  package.xml
src/image_test/src/: .image_publisher.cpp.swp  image_publisher.cpp
src/mypkg/scripts/: count.py  twice.py
src/mypkg_01/: CMakeLists.txt  package.xml
src/mypkg_01/src/: detectFace.cpp
src/mypkg_image/: CMakeLists.txt  package.xml
src/mypkg_image/src/: detectFace.cpp
src/raspi_camera/: CMakeLists.txt  package.xml
src/raspi_camera/src/: detectFace.cpp  (+1 more)
src/raspi_camera_test/: CMakeLists.txt  package.xml
src/raspi_image/: CMakeLists.txt  README.md  package.xml
src/sobel_test/: CMakeLists.txt
src/test_pkg/: CMakeLists.txt
(+24 files in other folders)
